--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-watch": "vite build --watch",
     "build-only": "vite build",
     "serve": "vite preview",
+    "start": "node server",
     "type-check": "vue-tsc --noEmit",
     "lint-code": "eslint --ext .ts,.js,.vue ./src/",
     "lint-styles": "stylelint ./src/**/*.scss",
@@ -29,6 +30,9 @@
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "@vueuse/core": "^9.10.0",
     "axios": "^0.27.2",
+    "connect-history-api-fallback": "^2.0.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "floating-vue": "^2.0.0-beta.20",
     "vue": "^3.2.37",
     "vue-content-loader": "^2.0.1",
