--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-watch": "vite build --watch",
     "build-only": "vite build",
     "serve": "vite preview",
-    "start": "node server",
+    "start": "ts-node server.mts",
     "type-check": "vue-tsc --noEmit",
     "lint-code": "eslint --ext .ts,.js,.vue ./src/",
     "lint-styles": "stylelint ./src/**/*.scss",
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "floating-vue": "^2.0.0-beta.20",
+    "ts-node": "^10.9.1",
     "vue": "^3.2.37",
     "vue-content-loader": "^2.0.1",
     "vue-i18n": "^9.2.2",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@types/express": "^4.17.15",
     "@types/node": "^16.11.45",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
