--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,21 @@
     {
       "path": "./tsconfig.config.json"
     }
-  ]
+  ],
+  // Most ts-node options can be specified here using their programmatic names.
+  // Those will override other options, but *only* in ts-node.
+  // Useful if you want to use ts-node alongside other packages with different
+  // options with a single tsconfig.json.
+  "ts-node": {
+    // This is an alias to @tsconfig/node16: https://github.com/tsconfig/bases
+    "extends": "ts-node/node16/tsconfig.json",
+    "esm": true,
+    // It is faster to skip typechecking.
+    // Remove if you want ts-node to do typechecking.
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      "module": "ESNext" // or ES2015, ES2020
+    },
+  }
 }
