move build logic to separate dir

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-watch": "vite build --watch",
-    "build-only": "vite build && bash move-built-pages.sh",
+    "build-only": "vite build && bash .vuelti/move-built-pages.sh",
     "serve": "vite preview",
-    "start": "ts-node server.mts",
+    "start": "ts-node .vuelti/server.mts",
     "type-check": "vue-tsc --noEmit",
     "lint-code": "eslint --ext .ts,.js,.vue ./src/",
     "lint-styles": "stylelint ./src/**/*.scss",
