--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ci": "yarn install --frozen-lockfile && yarn dev",
     "dev": "vite --port 3000",
-    "build": "run-p type-check build-only",
+    "build": "run-p type-check gen-pages build-only",
+    "gen-pages": "node .vuelti/generate-available-pages.js",
     "preview": "vite preview --port 4173",
     "build-watch": "vite build --watch",
     "build-only": "vite build && bash .vuelti/move-built-pages.sh",
