exchange bash script with node script

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+# envs used in Vue apps must be prefixed with VITE_, because those apps are built using Vite which expects such convention
 VITE_ENDPOINT_URL=/
+
+PORT=8080
