--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "vue3-mpa-test",
+  "name": "Vuelti",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "ci": "yarn install --frozen-lockfile && yarn dev",
-    "dev": "vite --port 3000",
     "build": "run-p type-check gen-pages build-only",
     "gen-pages": "ts-node .vuelti/generate-available-pages.mts",
-    "preview": "vite preview --port 4173",
     "build-watch": "vite build --watch",
     "build-only": "vite build && ts-node .vuelti/move-built-pages.mts",
-    "serve": "vite preview",
     "start": "ts-node .vuelti/server.mts",
     "type-check": "vue-tsc --noEmit",
     "lint-code": "eslint --ext .ts,.js,.vue ./src/",
